[package]
name = "yt_player"
version = "0.1.0"
edition = "2024"

[dependencies]
rustypipe = "0.11.4"
tokio = { version = "1", features = ["full"] }
dirs = "6.0.0"
mpv = "0.2.3"
thiserror = "2.0.12"
libmpv2 = "4.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rquickjs = { version = "0.9", features = ["bindgen]}